--- a/ASP/H/styles.css
+++ b/ASP/H/styles.css
@@ -1,107 +1,82 @@
-*{
-    margin:0px;
-    padding: 0px;
-    box-sizing: border-box;
+.navbar {
+    transition: all 0.4s;
 }
-nav{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    min-height: 8vh;
-    font-family: 'Poppins',sans-serif;
+
+.navbar .nav-link {
+    color: #fff;
 }
-.logo img{
-    width: 150px;
-    height: 80px;  
-}
-.nav-links{
-    display: flex;
-    justify-content: space-around;
-    width: 30%;
-}
-.nav-links li{
-    list-style: none;
-}
-.nav-links a{
-    color: floralwhite;
+
+.navbar .nav-link:hover,
+.navbar .nav-link:focus {
+    color: #fff;
     text-decoration: none;
-    letter-spacing: 3px;
-    font-weight: bold;
-    font-size: 14px;
 }
-.nav-links a.active , .nav-links a:hover{
-    color:#EA736C ;
+
+.navbar .navbar-brand {
+    color: #fff;
 }
-.burger{
-   display: none;
-   cursor: pointer;
+
+.navbar-brand img{
+    width:160px;
+    height: 70px;
 }
-.burger div{
-    width: 25px;
-    height: 3px;
-    background-color: floralwhite;
-    margin: 5px;
-    transition: all 0.3s ease;
+/* Change navbar styling on scroll */
+.navbar.active {
+    background: #fff;
+    box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
 }
-@media screen and (max-width:1024px){
-    .nav-links{
-        width: 60%;
+.navbar.active img{
+    display: none;
+}
+
+.navbar.active .nav-link {
+    color: #555;
+}
+
+.navbar.active .nav-link:hover,
+.navbar.active .nav-link:focus {
+    color: #555;
+    text-decoration: none;
+}
+
+.navbar.active .navbar-brand {
+    color: #555;
+}
+
+
+/* Change navbar styling on small viewports */
+@media (max-width: 991.98px) {
+    .navbar {
+        background: #fff;
+    }
+
+    .navbar .navbar-brand, .navbar .nav-link {
+        color: #555;
     }
 }
-@media screen and (max-width:768px){
-    body{
-        overflow-x: hidden;
-    }
-    .nav-links{
-        position: absolute;
-        right: 0px;
-        height: 92vh;
-        top: 8vh;
-        background-color: #064240;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 50%;
-        transform: translateX(100%);
-        transition: transform 0.5s ease-in;
-    }
-    .nav-links li{
-        opacity: 0;
-    }
-    .burger{
-        display: block;
-    }
-    .imgFondoa{
-        margin-top: 0;
-    }
-  
+
+
+
+/*
+*
+* ==========================================
+* FOR DEMO PURPOSES
+* ==========================================
+*
+*/
+.text-small {
+    font-size: 0.9rem !important;
 }
-.nav-active{
-    transform: translateX(0%);
-}
-@keyframes navLinkFade{
-    from{
-        opacity: 0;
-        transform:translateX(50px);
-    }
-    to{
-        opacity: 1;
-        transform: translateX(0px);
-    }
-}
-.toggle .line1{
-    transform: rotate(-45deg) translate(-5px,6px);
-}
-.toggle .line2{
-   opacity: 0;
-}
-.toggle .line3{
-    transform: rotate(45deg) translate(-5px,-6px);
+
+body {
+    min-height: 110vh;
+    background-color: #4ca1af;
+    background-image: linear-gradient(135deg, #4ca1af 0%, #c4e0e5 100%);
 }
 .imgFondoa{
     background-color: #490D40;
     background-image: url("house.jpg");
     background-size: cover;
-    height: 650px;
+    height: 950px;
     margin-top: -87px;
 }
